# auth-api-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: config.rs  config.rs.old  main.rs
src/config/: config.rs  mod.rs
src/db/: connection.rs  mod.rs  sql.rs
src/models/: user.rs
src/routes/: mod.rs
src/utils/: extras.rs  hash.rs  mod.rs
