[package]
name = "auth-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Web Framework ---
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Authentication & Security ---
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.9.2"

# --- Environment & Config ---
config = "0.15.19"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# --- Error Handling ---
thiserror = "2.0.17"
anyhow = "1.0.100"

# --- Architecture ---
async-trait = "0.1.89"

# --- Database ---
# We use 'runtime-tokio-rustls' to avoid OpenSSL complexity on Windows/Mac
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }

# 'protocol-ws' allows connecting to a remote Surreal instance
# 'kv-mem' allows running an in-memory version for testing
#surrealdb = { version = "2.4.0", features = ["protocol-ws", "kv-mem"] }

[profile.release]
strip = true
opt-level = 3
lto = "thin"
panic = "abort"
codegen-units = 1

